--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -21,16 +21,17 @@
 ##          enabled: false
 #        file-extension: yaml  #?????????
 
-spirng:
-  redis:
-    host: 47.96.164.27  # Redis ?????
-    port: 6379       # Redis ?????? 6379
-    password: RyanRay_redis  # Redis ?????????????
-    database: 0      # Redis ????????? 0
-    timeout: 2000    # ??????????
-    lettuce:
-      pool:
-        max-active: 8   # ????????
-        max-idle: 8     # ??????????
-        min-idle: 0     # ??????????
-        max-wait: -1    # ???????????????-1 ??????
+#spirng:
+#  data:
+#    redis:
+#      host: 47.96.164.27
+#      port: 6379
+#      password: RyanRay_redis
+#      database: 0
+#      timeout: 2000
+#      lettuce:
+#        pool:
+#          max-active: 8
+#          max-idle: 8
+#          min-idle: 0
+#          max-wait: -1
