--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,5 @@
 spring:
   application:
     name: ryan
-  cloud:
-    nacos:
-      discovery:
-#        register-enabled: true
-        server-addr: 47.96.164.27:8848
-#        namespace: public
-#        group: DEFAULT_GROUP
-        namespace: dev
-        group: test
-        username: ${spring.cloud.nacos.username:nacos}
-        password: ${spring.cloud.nacos.password:nacos}
-      config:
-        server-addr: 47.96.164.27:8848
-        namespace: dev
-        group: test
-        username: ${spring.cloud.nacos.username:nacos}
-        password: ${spring.cloud.nacos.password:nacos}
-#        file-extension: yaml
-
+  profiles:
+    active: dev
