--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,37 +1,13 @@
-#spring:
-#  # ????
-#  application:
-#    name: ryan
-##  config:
-##    import: nacos
-#
-#  cloud:
-#    # Nacos??
-#    nacos:
-#      discovery:  # ????
-#        register-enabled: true
-#        server-addr: 47.96.164.27:8848  # Nacos????????
-#        namespace: dev  #????????ID
-#        group: test #????
-#      config: # ????
-#        server-addr: 47.96.164.27:8848  # Nacos????????
-#        namespace: dev  #????????ID
-#        group: test #????
-##        import-check:
-##          enabled: false
-#        file-extension: yaml  #?????????
-
-#spirng:
-#  data:
-#    redis:
-#      host: 47.96.164.27
-#      port: 6379
-#      password: RyanRay_redis
-#      database: 0
-#      timeout: 2000
-#      lettuce:
-#        pool:
-#          max-active: 8
-#          max-idle: 8
-#          min-idle: 0
-#          max-wait: -1
+spring:
+  cloud:
+    nacos:
+      config:
+        server-addr: ${spring.cloud.nacos.discovery.server-addr:47.96.164.27:8848}
+        #        namespace: public
+        #        name: dd310b39-3e07-460b-997d-f760412c5ce5
+        #        data-id: ryan-dev.yaml
+        namespace: public
+        name: ryan.yaml
+        data-id: ryan.yaml
+        group: DEFAULT_GROUP
+        file-extension: yaml
